# Data_Project_DIALLO_DIOP

./: .gitignore  Design.md  Procfile  README.md  config.py  main.py  pyproject.toml  render.yaml  requirements.txt
.github/: CI-CD-GUIDE.md
.github/workflows/: code-quality.yml  dependencies-check.yml  pr-validation.yml  unit-tests.yml
assets/: style.css
data/cleaned/: cleaneddata.csv
data/raw/: Plan_Projet_Data_DIOP_DIALLO.xlsx
src/: __init__.py
src/components/: __init__.py  charts_theme.py  filters.py  footer.py  geomap.py  header.py  heat_timeline.py  histogram.py  kpi_card.py  navbar.py  organization_inspector.py  scope_breakdown.py
src/pages/: __init__.py  about.py  analysis.py  home.py
src/utils/: __init__.py  clean_data.py  common_functions.py  get_data.py
tests/: README.md  __init__.py  test_clean_data.py  test_common_functions.py  test_config.py  test_get_data.py  test_imports.py  test_requirements.py  test_structure.py
